2015-10-31 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c: fixed bug if rules are removed

2015-10-28 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c: fixed total number of entries

2015-08-08 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c: added support for new e2fsattrs flags

2015-05-06 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c: adjusted report layout

2015-03-02 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Renamed 'configure.in' to 'configure.ac'

2013-05-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Print checksums of databases in verbose level 2 or higher (closes
	  feature request 1502032)
	* Added new 'database_attrs' option
	* configure.in: fixed compilation with selinux
	* src/conf_lex.l, src/db_lex.l: fixed definition of YYDEBUG

2013-05-18	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* configure.in: removed check for 'libcrypt'
	* Renamed 'detailed_init_report' option to 'report_detailed_init'

2013-05-17	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* configure.in:
	  - fixed "suspicious cache-id" warnings
	  - removed 'AC_CONFIG_MACRO_DIR' macro
	* src/Makefile.am:
	  - replaced INCLUDES with AM_CPPFLAGS

2013-05-16	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Handle tilde (~) in database paths and report urls
	* src/compare_db.c: adjusted report layout

2013-05-14	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/db.c: fixed segfault when dbconf->db_out is NULL
	* Replaced fopen.c with the version from curl-7.30.0

2013-05-08	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - fixed output of checksums
	  - use size_t as the type of for loop variable

2013-05-06	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - fixed return value of database initialization
	  - minor code cleanup
	* src/db_file.c, src/do_md.c:
	  - fixed use of unportable %m format
	* doc/aide.1.in:
	  - fixed format in NOTES section