@@ -15,7 +15,7 @@ EX      [" "\t]*
 #define YYDEBUG 1
 
 /*
- * Copyright (C) 1999-2002,2004-2006,2010-2013 Rami Lehti, Pablo
+ * Copyright (C) 1999-2002,2004-2006,2010-2013,2015 Rami Lehti, Pablo
  * Virolainen, Richard van den Berg, Hannes von Haugwitz
  * $Header$
  * This program is free software; you can redistribute it and/or
@@ -71,7 +71,7 @@ int var_in_conflval=0;
 
 %}
 
-%Start A EXPR DEFSTMT DEFSTMT2 IFDEFSTMT INCLUDE EXPREQUHUNT VARSUB CONFVALHUNT IFHOSTSTMT
+%Start A EXPR DEFSTMT DEFSTMT2 IFDEFSTMT INCLUDE EXPREQUHUNT VARSUB CONFVALHUNT IFHOSTSTMT E2FSATTRS
 
 %%
 
@@ -359,6 +359,18 @@ int var_in_conflval=0;
   error(230,"%li:report_base16 =\n",conf_lineno);
   BEGIN CONFVALHUNT;
   return (TREPORTBASE16);
+}
+
+^[\t\ ]*"report_ignore_e2fsattrs"{E} {
+  error(230,"%li:report_ignore_e2fsattrs =\n",conf_lineno);
+  BEGIN E2FSATTRS;
+  return (TREPORTIGNOREE2FSATTRS);
+}
+
+<E2FSATTRS>([A-Za-z]+|"0") {
+  conflval.s=strdup(conftext);
+  BEGIN 0;
+  return (TSTRING);
 }
 
 ^[\t\ ]*"gzip_dbout"{E} {
