@@ -1,3 +1,6 @@
+2015-11-07 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Added new 'report_ignore_e2fsattrs' option
+
 2015-10-31 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* src/gen_list.c: fixed bug if rules are removed
 
